# CppTests

./: .gitmodules  CMakeLists.txt  README.md
src/: CMakeLists.txt
src/pure_cpp/: CMakeLists.txt  main.cpp  test.cpp
src/pure_cpp/special/: CMakeLists.txt
src/pure_cpp/special/static_memory/: CMakeLists.txt  README.md  static_counters_class.cpp  static_counters_class.h  test_shared.cpp  test_static.cpp
src/pure_cpp/templates/: decltype.cpp  perfect_forwarding.cpp
